Fix body text spacing issue (based on 03f0f49)

--- a/src/app.css
+++ b/src/app.css
@@ -45,6 +45,7 @@
 body {
 	font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
 	color: #000000;
+	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	text-rendering: optimizeLegibility;
@@ -54,5 +55,5 @@ body {
 }
 
 p {
-	color: #000000;
+	color: #737373;
 }
